# RUMOR

./: CMakeLists.txt  README.md  package.xml  setup.py
data/: calibration.txt  heuristics.txt  heuristicsComments.txt  velocity_constraints.txt  velocity_constraintsComments.txt
data/testing_scenarios/: create_scenarios  create_scenarios.cpp
data/testing_scenarios/1-1/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-10/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-11/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-12/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-13/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-14/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-15/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  11.dovs  110.dovs  111.dovs  112.dovs  113.dovs  114.dovs  115.dovs  116.dovs  117.dovs  118.dovs  119.dovs  12.dovs  120.dovs  121.dovs  122.dovs  123.dovs  124.dovs  125.dovs  126.dovs  127.dovs  128.dovs  129.dovs  13.dovs  130.dovs  131.dovs  132.dovs  133.dovs  134.dovs  (+160 more)
data/testing_scenarios/1-2/: 1.dovs  10.dovs  100.dovs  101.dovs  102.dovs  103.dovs  104.dovs  105.dovs  106.dovs  107.dovs  108.dovs  109.dovs  (+188 more)
data/testing_scenarios_orca/: create_scenarios  create_scenarios.cpp
include/rl_dovs/: ActiveAgent.cpp  ActiveAgent.h  Agent.cpp  Agent.h  CircularAgent.cpp  CircularAgent.h  ComputeDensityVS.cpp  GeometryCGAL.cpp  GeometryCGAL.h  LinearAgent.cpp  LinearAgent.h  OldState.h  PassiveAgent.cpp  PassiveAgent.h  Simulation.cpp  Simulation.h  State.h  StaticAgent.cpp  StaticAgent.h  Strategies.cpp  Strategies.h  TrajectoryAgent.cpp  TrajectoryAgent.h  VS.cpp  VS.h  active_agent.h  active_agent_dqn.h  active_agent_move_base.h  active_agent_multi.h  active_agent_single.h  astar.cpp  astar.h  config.h  correos.txt  dataDOVTS.h  dovs.cpp  dovs.h  dovts.cpp  dovts.h  graficas.cpp  (+5 more)
launch/: global_planner.launch  move_base.launch  multi_agents.launch  multi_agents_template.launch  publish_positions.launch  publish_positions_template.launch  rviz.launch  stage.launch  stage_template.launch
launch/move_base_params/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
msg/: CollaborativeInfo.msg
rviz/: amcl_pose.rviz  amcl_pose_2_lasers.rviz
scripts/: StageGym.py  StageGymCrowdNav.py  StageGymGoal.py  StageGymSAC.py  create_scenario.cpp  crowdnav_server.py  killall.sh  launch.sh  launch_video.sh  sac_server.py  setwindow  setwindow2  start_agents.cpp  test_methods.cpp  test_methods.sh  testing_script.sh  training_script.sh
scripts/configs/: env.config
scripts/data/: calibration.txt
scripts/escenarios/: 25.json  58.json  65.json  66.json  67.json  68.json  69.json  70.json  71.json  72.json  73.json  74.json  75.json  76.json  corners.json  def5.json  hola.json  iros.json  prueba.json  statics.json
src/: active_agent.cpp  active_agent_dqn.cpp  active_agent_move_base.cpp  active_agent_multi.cpp  active_agent_single.cpp  example_agent.cpp  fake_amcl.cpp  global_planner_dovs.cpp  pasive_agent.cpp  publish_positions.cpp  scenario_tracker.cpp
srv/: DQN_action.srv  DQN_action_rules.srv  DQN_gym.srv  DQN_gym_crowdnav.srv  DQN_gym_lidar.srv  DQN_gym_reset.srv  DQN_gym_reset_crowdnav.srv  DQN_gym_reset_lidar.srv  DQN_restart_parameters.srv  DQN_store.srv  SAC_action.srv  SAC_gym.srv  SAC_gym_reset.srv  add_obstacle_map.srv
worlds/: basic.world  basic_corridors_2.world  basic_template.world  basic_template_easy.world  basic_template_global.world  basic_template_navrep.world  basic_template_training.world  basic_tracker.world  basic_upgraded.world  draw_world.py  scenario1.pgm  scenario1.world  scenario1.yaml  scenario2.pgm  scenario2.world  scenario2.yaml  simple.yaml  simple_corridors.pgm  simple_corridors.yaml  simple_easy.yaml  simple_example.pgm
(+12059 files in other folders)
